# prompt-versioner

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish-testpypi.yml  release.yml
api-reference/cli/commands/: index.html
api-reference/cli/pricing/: index.html
api-reference/cli/utils/: index.html
api-reference/core/enums/: index.html
api-reference/core/version-manager/: index.html
api-reference/core/versioner/: index.html
api-reference/metrics/aggregator/: index.html
api-reference/metrics/analyzer/: index.html
api-reference/metrics/calculator/: index.html
api-reference/metrics/models/: index.html
api-reference/metrics/pricing/: index.html
api-reference/metrics/tracker/: index.html
api-reference/storage/database/: index.html
api-reference/storage/queries/: index.html
api-reference/storage/schema/: index.html
docs/: index.md  installation.md  quickstart.md
docs/development/: contributing.md
docs/examples/: advanced-workflows.md  basic-usage.md  best-practices.md  integrations.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/stylesheets/: extra.css
docs/user-guide/: ab-testing.md  collaboration.md  core-concepts.md  metrics-tracking.md  multi-model-comparison.md  performance-monitoring.md  version-management.md  web-dashboard.md
examples/: ab_testing.py  basic_usage.py  clear_db.py  code_review.py  metrics_tracking.py  multi_models.py  performance_monitoring.py  run_dashboard.py  summarization_example.py  test_all_features.py  test_with_metrics.py  version_management.py
examples/advanced-workflows/: index.html
examples/basic-usage/: index.html
examples/best-practices/: index.html
examples/integrations/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
prompt_versioner/: __init__.py  cli.py  core.py  diff.py  metrics.py  monitoring.py  storage.py  testing.py  tracker.py
prompt_versioner/core/: versioner.py
prompt_versioner/storage/: __init__.py  database.py  metrics.py  versions.py
prompt_versioner/web/: __init__.py  app.py  config.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/javascripts/: extra.js
site/search/: search_index.json
user-guide/ab-testing/: index.html
user-guide/collaboration/: index.html
user-guide/core-concepts/: index.html
user-guide/metrics-tracking/: index.html
user-guide/multi-model-comparison/: index.html
user-guide/performance-monitoring/: index.html
user-guide/version-management/: index.html
user-guide/web-dashboard/: index.html
version/: index.html
(+99 files in other folders)
