[tool.poetry]
name = "prompt-versioner"
version = "0.1.0"
description = "Intelligent versioning system for LLM prompts with Git integration"
authors = ["Sveva Pepe <sveva.pepe@example.com>"]
readme = "README.md"
packages = [{include = "prompt_versioner"}]

[tool.poetry.dependencies]
python = "^3.11"
gitpython = "^3.1.40"
click = "^8.1.7"
rich = "^13.7.0"
pydantic = "^2.5.0"
flask = "^3.0.0"
pyaml = "^25.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.1"

[tool.poetry.scripts]
pv = "prompt_versioner.cli:cli" 
prompt-dashboard = "prompt_versioner.cli:dashboard_command"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true